Fixed overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,5 +11,6 @@ html, body{
   width: 100%;
   height: 100vh;
   max-height: fit-content;
+  overflow: hidden;
 }
 
